将music.mp3改为本地资源

--- a/index.html
+++ b/index.html
@@ -575,7 +575,7 @@
             </div>
         </div>
 
-        <audio id="bgm-audio" src="https://m801.music.126.net/20250926233707/e599960a79e423e8744681cd31894175/jdymusic/obj/wo3DlMOGwrbDjj7DisKw/35975638029/8e56/9947/8467/7409b7562a1c195a683eaaaad256f89c.mp3?vuutv=1BOW76hnasgHXzDx7ny19LpNDJRk6yOkMHUN5JdouwTiEcGQPJAo27hJw5DK4DUoZJoSH74/EH7ecHwWcCdyg/DVrP84gZJWtobgXVd5Tc6xW4WlG32C6kJ24JE6Y9as5oBJGtzwu4+xO6yOvqcMpQ==&cdntag=bWFyaz1vc193ZWIscXVhbGl0eV9zdGFuZGFyZA"></audio>
+        <audio id="bgm-audio" src="music.mp3"></audio>
     </div>
 
 
