将js脚本和css样式从html中分离

--- a/index.html
+++ b/index.html
@@ -6,384 +6,7 @@
     <title>晓夜の主页喵～</title>
     <link rel="icon" type="image/png" href="favicon.png">
     <link href="https://cdn.bootcdn.net/ajax/libs/lxgw-wenkai-screen-webfont/1.7.0/lxgwwenkaiscreen.css" rel="stylesheet">
-    <style>
-        :root {
-            --rosewater: #f2d5cf;
-            --flamingo: #eebebe;
-            --pink: #f4b8e4;
-            --mauve: #ca9ee6;
-            --red: #e78284;
-            --maroon: #ea999c;
-            --peach: #ef9f76;
-            --yellow: #e5c890;
-            --green: #a6d189;
-            --teal: #81c8be;
-            --sky: #99d1db;
-            --sapphire: #85c1dc;
-            --blue: #8caaee;
-            --lavender: #babbf1;
-
-            --text: #c6d0f5;
-            --subtext1: #b5bfe2;
-            --subtext0: #a5adce;
-            --overlay2: #949cbb;
-            --overlay1: #838ba7;
-            --overlay0: #737994;
-            --surface2: #626880;
-            --surface1: #51576d;
-            --surface0: #414559;
-            --base: #303446;
-            --mantle: #292c3c;
-            --crust: #232634;
-        }
-
-         body {
-             font-family: 'LXGW Wenkai Screen', sans-serif;
-             max-width: 800px;
-             margin: 0 auto;
-             padding: 20px;
-             background: var(--base);
-             color: var(--text);
-             line-height: 1.6;
-         }
-
-        @media (max-width: 768px) {
-            body {
-                padding: 15px;
-            }
-        }
-
-        .big-card {
-            background: var(--surface0);
-            padding: 25px;
-            border-radius: 10px;
-            box-shadow: 
-                0 4px 12px var(--surface1),
-                0 1px 2px var(--surface2);
-            margin: 20px 0;
-            border-left: 4px solid var(--mauve);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-
-        @media (max-width: 768px) {
-           .big-card {
-               padding: 15px;
-           }
-        }
-
-        .big-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 
-                0 2px 5px var(--blue),
-                0 1px 2px var(--lavender);
-        }
-
-        .social-div {
-            background: var(--surface0);
-            padding: 10px;
-            border-radius: 10px;
-            box-shadow: 
-                0 4px 12px var(--surface1),
-                0 1px 2px var(--surface2);
-            margin: 20px 0;
-            border-left: 4px solid var(--red);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-
-        .social-div:hover {
-            transform: translateY(-2px);
-            box-shadow: 
-                0 2px 5px var(--peach),
-                0 1px 2px var(--maroon);
-        }
-
-        .avatar-div {
-            width: 80px;
-            height: 80px;
-            border-radius: 50%;
-            background: url('avatar.jpg') no-repeat center center;
-            background-size: cover;
-            margin-bottom: 15px;
-            border: 3px solid var(--mauve);
-        }
-
-        @media (max-width: 768px) {
-           .avatar-div {
-               width: 60px;
-               height: 60px;
-           }
-        }
-
-        h1 {
-            color: var(--mauve);
-            margin-bottom: 15px;
-            font-size: 2.2rem;
-            font-weight: 600;
-        }
-
-        @media (max-width: 768px) {
-           h1 {
-               font-size: 1.8rem;
-           }
-        }
-
-        p {
-            color: var(--subtext1);
-            margin-bottom: 10px;
-        }
-
-        @media (max-width: 768px) {
-           p {
-               font-size: 0.9rem;
-           }
-        }
-
-        #motto {
-            display: block;
-            width: 600px;
-            min-height: 1.2em;
-            position: relative;
-        }
-
-        @media (max-width: 768px) {
-           #motto {
-               width: auto;
-           }
-        }
-
-        #motto-text {
-            white-space: nowrap;
-        }
-
-        #motto-cursor {
-            display: inline-block;
-            width: 10px;
-            text-align: center;
-            animation: blink 1s step-end infinite;
-        }
-        /* Tip: 参数含义 */
-        .top-buttons {
-            position: fixed;
-            top: 20px;         /* 距离顶部 */
-            right: 20px;       /* 距离右边 */
-            display: flex;     /* 横向排列 */
-            gap: 10px;         /* 按钮间距 */
-        }
-
-        @media (max-width: 768px) {
-            .top-buttons {
-                top: 10px;
-                right: 10px;
-            }
-        }
-
-        /* Tip: 参数含义 */
-        .top-time {
-            color: var(--subtext1);
-            position: fixed;
-            top: 20px;         /* 距离顶部 */
-            left: 20px;       /* 距离左边 */
-        }
-
-        @media (max-width: 768px) {
-            .top-time {
-                top: 10px;
-                left: 10px;
-            }
-        }
-        .btn {
-            background: var(--surface0);
-            padding: 8px 16px;
-            border-radius: 20px;
-            cursor: pointer;
-            transition: all 0.3s ease;
-            border: 2px solid transparent;
-            font-size: 0.9rem;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-
-        .btn:hover {
-            background: var(--mauve);
-            color: white;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 8px rgba(136, 57, 239, 0.3);
-        }
-
-        .btn:active {
-            transform: translateY(0);
-        }
-        .small-card {
-            display: flex;
-            align-items: center;
-            background: var(--surface0);
-            padding: 12px 16px;
-            margin: 10px 0;
-            border-radius: 8px;
-            border-left: 4px solid var(--blue);
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-        }
-
-        @media (max-width: 768px) {
-           .small-card {
-               padding: 10px 12px;
-           }
-        }
-
-        .small-card:hover {
-            transform: translateY(-2px);
-            box-shadow: 
-                0 2px 5px var(--sky),
-                0 1px 2px var(--lavender);
-        }
-
-        .small-card .icon {
-            font-size: 1.4rem;
-            margin-right: 12px;
-        }
-
-        .small-card .label a {
-            text-decoration: none;
-            color: var(--text);
-            font-size: 1.1rem;
-            font-weight: 500;
-        }
-
-        @media (max-width: 768px) {
-           .small-card .label a {
-               font-size: 1rem;
-           }
-        }
-
-        .social-title {
-            text-align: center;
-            font-size: 1.1rem;
-            font-weight: 600;
-            margin-bottom: 15px;
-            color: var(--maroon);
-        }
-
-
-        .card-row {
-            display: flex;
-            justify-content: space-between; /* 平均分布 */
-            gap: 15px;                      /* 卡片间距 */
-        }
-
-        @media (max-width: 768px) {
-            .card-row {
-                flex-direction: column;
-            }
-        }
-
-        .card-row .small-card {
-            flex: 1;
-            margin: 0;
-            display: flex;
-            align-items: center;    /* 垂直居中 */
-            justify-content: center;/* 水平居中 */
-            text-align: left;
-        }
-
-        .socials {
-            display: flex;
-            justify-content: center;
-            gap: 20px;
-            margin: 30px 0;
-            flex-wrap: wrap;
-        }
-
-        @media (max-width: 768px) {
-            .socials {
-                gap: 10px;
-            }
-        }
-        .social-link {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 44px;
-            height: 44px;
-            border-radius: 50%;
-            background: var(--surface0);
-            color: var(--text);
-            text-decoration: none;
-            transition: all 0.3s ease;
-            border: 2px solid transparent;
-        }
-
-        .social-link:hover {
-            background: var(--mauve);
-            color: white;
-            transform: translateY(-3px);
-            box-shadow: 0 4px 12px rgba(202, 158, 230, 0.3);
-        }
-
-        .social-link svg {
-            width: 24px;
-            height: 24px;
-        }
-
-        @media (max-width: 768px) {
-           .social-link svg {
-               width: 20px;
-               height: 20px;
-           }
-        }
-
-         /* 毛玻璃背景层，默认隐藏 */
-        #blur-bg {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100vw;
-            height: 100vh;
-            background: url('background.jpg') center/cover no-repeat;
-            backdrop-filter: blur(12px);
-            -webkit-backdrop-filter: blur(12px); /* Safari 支持 */
-            opacity: 0.5; /* 半透明效果，可调整 */
-            pointer-events: none; /* 不阻止鼠标操作 */
-            z-index: -1; /* 放在内容后面 */
-            display: none; /* 默认不显示 */
-        }
-
-         @media (max-width: 768px) {
-             #blur-bg {
-                 background: url('background-mobile.jpg') center/cover no-repeat;
-             }
-         }
-
-         @media (max-width: 768px) and (orientation: portrait) {
-             #blur-bg {
-                 background: url('background-mobile.jpg') center/cover no-repeat;
-             }
-         }
-
-        .light-mode .big-card,
-        .light-mode .small-card,
-        .light-mode .social-div,
-        .light-mode .BGM-div {
-            background: rgba(255, 255, 255, 0.3) !important; /* 半透明白色背景 */
-            backdrop-filter: blur(4px);
-            -webkit-backdrop-filter: blur(4px); /* Safari支持 */
-        }
-
-        .BGM-div
-        {
-            display:none; 
-            position:fixed; 
-            bottom:20px; 
-            right:20px; 
-            background:var(--surface0); 
-            color:var(--text); 
-            padding:15px; 
-            border-radius:12px; 
-            box-shadow:0 4px 12px var(--surface1); 
-            width:260px; 
-            z-index:999;
-            font-family: 'LXGW Wenkai Screen', sans-serif;
-        }
-
-      </style>
+    <link rel="stylesheet" href="style.css">
    </head>
   <body>
     <div id="blur-bg"></div>
@@ -401,118 +24,8 @@
             <span id="motto-cursor">_</span>
         </p>
         <!-- 头像&座右铭 -->
-        <script>
-            const texts = [
-            "『保持热爱，奔赴山海。』",
-            "『在这个世界难免会迷茫，但别再把小刀带在身上』",
-            "『生命是一万次的谎话，吊唁着梦和童话』"
-            ];
 
-            const textElement = document.getElementById('motto-text');
-            const speed = 100; // 打字速度
-            const pauseTime = 500; // 停顿时间
 
-            let currentIndex = 0;
-
-            function typeWriter(text, element, speed, callback) {
-            let i = 0;
-            element.textContent = '';
-            const typing = setInterval(() => {
-                if (i < text.length) {
-                element.textContent += text.charAt(i);
-                i++;
-                } else {
-                clearInterval(typing);
-                setTimeout(callback, pauseTime);
-                }
-            }, speed);
-            }
-
-            function deleteWriter(element, speed, callback) {
-            let text = element.textContent;
-            let i = text.length;
-            const deleting = setInterval(() => {
-                if (i > 0) {
-                i--;
-                element.textContent = text.substring(0, i);
-                } else {
-                clearInterval(deleting);
-                setTimeout(callback, pauseTime);
-                }
-            }, speed);
-            }
-
-            function nextText() {
-            const text = texts[currentIndex];
-            typeWriter(text, textElement, speed, () => {
-                deleteWriter(textElement, speed, () => {
-                currentIndex = (currentIndex + 1) % texts.length;
-                nextText();
-                });
-            });
-            }
-
-            nextText();
-            
-            const blurBg = document.getElementById('blur-bg');
-            const themeBtn = document.getElementById("theme-change");
-            let isDark = true;
-            themeBtn.addEventListener("click", () => {
-                if (isDark) {
-                    document.documentElement.style.setProperty("--rosewater", "#dc8a78");
-                    document.documentElement.style.setProperty("--flamingo", "#dd7878");
-                    document.documentElement.style.setProperty("--pink", "#ea76cb");
-                    document.documentElement.style.setProperty("--mauve", "#8839ef");
-                    document.documentElement.style.setProperty("--red", "#d20f39");
-                    document.documentElement.style.setProperty("--maroon", "#e64553");
-                    document.documentElement.style.setProperty("--peach", "#fe640b");
-                    document.documentElement.style.setProperty("--yellow", "#df8e1d");
-                    document.documentElement.style.setProperty("--green", "#40a02b");
-                    document.documentElement.style.setProperty("--teal", "#179299");
-                    document.documentElement.style.setProperty("--sky", "#04a5e5");
-                    document.documentElement.style.setProperty("--sapphire", "#209fb5");
-                    document.documentElement.style.setProperty("--blue", "#1e66f5");
-                    document.documentElement.style.setProperty("--lavender", "#7287fd");
-                    document.documentElement.style.setProperty("--text", "#4c4f69");
-                    document.documentElement.style.setProperty("--subtext1", "#5c5f77");
-                    document.documentElement.style.setProperty("--subtext0", "#6c6f85");
-                    document.documentElement.style.setProperty("--overlay2", "#7c7f93");
-                    document.documentElement.style.setProperty("--overlay1", "#8c8fa1");
-                    document.documentElement.style.setProperty("--overlay0", "#9ca0b0");
-                    document.documentElement.style.setProperty("--surface2", "#acb0be");
-                    document.documentElement.style.setProperty("--surface1", "#bcc0cc");
-                    document.documentElement.style.setProperty("--surface0", "#ccd0da");
-                    document.documentElement.style.setProperty("--base", "#eff1f5");
-                    document.documentElement.style.setProperty("--mantle", "#e6e9ef");
-                    document.documentElement.style.setProperty("--crust", "#dce0e8");
-                    themeBtn.textContent = "🌙";
-                    blurBg.style.display = 'block';
-                    document.body.classList.add('light-mode');
-                    isDark = false;
-                } 
-                else {
-                    document.documentElement.removeAttribute("style");
-                    themeBtn.textContent = "☀️";
-                    blurBg.style.display = 'none';
-                    document.body.classList.remove('light-mode');
-                    isDark = true;
-                }
-            });
-        </script>
-        <script>
-            function updateTime() {
-                const now = new Date();
-                const year = now.getFullYear();
-                const month = (now.getMonth() + 1).toString().padStart(2, '0');
-                const day = now.getDate().toString().padStart(2, '0');
-                const hours = now.getHours().toString().padStart(2, '0');
-                const minutes = now.getMinutes().toString().padStart(2, '0');
-                document.getElementById('top-time').textContent = `${year}年${month}月${day}日 ${hours}:${minutes}`;
-            }
-
-            updateTime();
-            setInterval(updateTime, 1000);
-        </script>
     </div>
     <div class="card-row">
         <div class="small-card" onclick="window.open('https://leonxie.cn', '_blank')">
@@ -593,69 +106,7 @@
     </div>
 
 
-    <script>
-    const musicBtn = document.getElementById('music-btn');
-    const bgmPopup = document.getElementById('bgm-popup');
-    const bgmAudio = document.getElementById('bgm-audio');
-    const bgmToggle = document.getElementById('bgm-toggle');
-    const bgmToggleIcon = document.getElementById('bgm-toggle-icon');
-    const bgmReplay = document.getElementById('bgm-replay');
-    const bgmBar = document.getElementById('bgm-bar');
-    const bgmBarContainer = document.getElementById('bgm-bar-container');
-    const bgmTime = document.getElementById('bgm-time');
-
-    // 显示/隐藏弹窗
-    musicBtn.addEventListener('click', () => {
-        bgmPopup.style.display = bgmPopup.style.display === 'none' ? 'block' : 'none';
-    });
-
-    // 播放/暂停切换
-    bgmToggle.addEventListener('click', () => {
-        if (bgmAudio.paused) {
-            bgmAudio.play();
-        } else {
-            bgmAudio.pause();
-        }
-    });
-
-    // 重播
-    bgmReplay.addEventListener('click', () => {
-        bgmAudio.currentTime = 0;
-        bgmAudio.play();
-    });
-
-    // 更新播放状态按钮
-    bgmAudio.addEventListener('play', () => {
-        bgmToggleIcon.innerHTML = '<path d="M6 19h4V5H6zm8-14v14h4V5z"/>'; // 暂停图标
-    });
-    bgmAudio.addEventListener('pause', () => {
-        bgmToggleIcon.innerHTML = '<path d="M8 5v14l11-7z"/>'; // 播放图标
-    });
-
-    // 更新进度条和时间
-    bgmAudio.addEventListener('timeupdate', () => {
-        if (bgmAudio.duration) {
-            const percent = (bgmAudio.currentTime / bgmAudio.duration) * 100;
-            bgmBar.style.width = percent + '%';
-            bgmTime.textContent = formatTime(bgmAudio.currentTime) + ' / ' + formatTime(bgmAudio.duration);
-        }
-    });
-
-    // 点击进度条跳转
-    bgmBarContainer.addEventListener('click', e => {
-        const rect = bgmBarContainer.getBoundingClientRect();
-        const clickX = e.clientX - rect.left;
-        const percent = clickX / rect.width;
-        bgmAudio.currentTime = percent * bgmAudio.duration;
-    });
-
-    // 格式化时间 mm:ss
-    function formatTime(seconds) {
-        const m = Math.floor(seconds / 60);
-        const s = Math.floor(seconds % 60);
-        return `${m}:${s.toString().padStart(2,'0')}`;
-    }
-    </script>
+    <script src="script.js"></script>
     <!-- BGM播放，小弹窗（歌曲信息、开始、停止、显示进度、重播）-->
   </body>
 </html>
